--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -101,7 +101,7 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
     ports:
-      - "${ELASTICSEARCH_PORT}:9200"
+      - "9200:9200"
     volumes:
       - ./monitoring:/usr/share/elasticsearch/data
     networks:
@@ -135,7 +135,7 @@ services:
 
   # Prometheus for metrics
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v2.53.5
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -161,7 +161,7 @@ services:
 
   # Streaming service (Kafka Connect for ES sink)
   kafka-connect:
-    image: confluentinc/cp-kafka-connect:latest
+    image: confluentinc/cp-kafka-connect:7.2.15
     environment:
       - CONNECT_BOOTSTRAP_SERVERS=kafka:9092
       - CONNECT_REST_ADVERTISED_HOST_NAME=kafka-connect
@@ -203,7 +203,6 @@ services:
       - KAFKA_TOPIC=${KAFKA_TOPIC}
     volumes:
       - ./serving:/app
-      - ./modeling/model:/app/model
     depends_on:
       - mlflow
       - kafka
