--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,12 +126,18 @@ services:
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
       - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CREATE_TOPICS=predictions:1:1
     ports:
       - "${KAFKA_PORT}:9092"
     depends_on:
       - zookeeper
     networks:
       - mlnet
+    healthcheck:
+      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
 
   # Prometheus for metrics
   prometheus:
@@ -159,32 +165,32 @@ services:
     networks:
       - mlnet
 
-  # Streaming service (Kafka Connect for ES sink)
-  kafka-connect:
-    image: confluentinc/cp-kafka-connect:7.2.15
-    environment:
-      - CONNECT_BOOTSTRAP_SERVERS=kafka:9092
-      - CONNECT_REST_ADVERTISED_HOST_NAME=kafka-connect
-      - CONNECT_GROUP_ID=compose-connect-group
-      - CONNECT_CONFIG_STORAGE_TOPIC=docker-connect-configs
-      - CONNECT_OFFSET_STORAGE_TOPIC=docker-connect-offsets
-      - CONNECT_STATUS_STORAGE_TOPIC=docker-connect-status
-      - CONNECT_KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-      - CONNECT_VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-      - CONNECT_INTERNAL_KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-      - CONNECT_INTERNAL_VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-      - CONNECT_PLUGIN_PATH=/usr/share/java
-      - CONNECT_LOG4J_LOGGERS=org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
-      - CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR=1
-      - CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR=1
-      - CONNECT_STATUS_STORAGE_REPLICATION_FACTOR=1
-    depends_on:
-      - kafka
-      - elasticsearch
-    networks:
-      - mlnet
-    volumes:
-      - ./communication:/etc/kafka-connect
+  # Streaming service (Optional - Kafka Connect for ES sink)
+  # kafka-connect:
+  #   image: confluentinc/cp-kafka-connect:7.2.15
+  #   environment:
+  #     - CONNECT_BOOTSTRAP_SERVERS=kafka:9092
+  #     - CONNECT_REST_ADVERTISED_HOST_NAME=kafka-connect
+  #     - CONNECT_GROUP_ID=compose-connect-group
+  #     - CONNECT_CONFIG_STORAGE_TOPIC=docker-connect-configs
+  #     - CONNECT_OFFSET_STORAGE_TOPIC=docker-connect-offsets
+  #     - CONNECT_STATUS_STORAGE_TOPIC=docker-connect-status
+  #     - CONNECT_KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+  #     - CONNECT_VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+  #     - CONNECT_INTERNAL_KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+  #     - CONNECT_INTERNAL_VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+  #     - CONNECT_PLUGIN_PATH=/usr/share/java
+  #     - CONNECT_LOG4J_LOGGERS=org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
+  #     - CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR=1
+  #     - CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR=1
+  #     - CONNECT_STATUS_STORAGE_REPLICATION_FACTOR=1
+  #   depends_on:
+  #     - kafka
+  #     - elasticsearch
+  #   networks:
+  #     - mlnet
+  #   volumes:
+  #     - ./communication:/etc/kafka-connect
 
   # Flask model serving service
   serving:
@@ -216,8 +222,10 @@ services:
       context: ./communication
       dockerfile: Dockerfile
     depends_on:
-      - kafka
-      - elasticsearch
+      kafka:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_started
     networks:
       - mlnet
     volumes:
