--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,6 +5,6 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-  - job_name: 'flask-service'
+  - job_name: 'api-service'
     static_configs:
       - targets: ['serving:8000'] 
