--- a/serving/Dockerfile
+++ b/serving/Dockerfile
@@ -9,4 +9,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+ENV PYTHONUNBUFFERED=1
+
+CMD ["gunicorn", "app:app", \
+     "--worker-class", "uvicorn.workers.UvicornWorker", \
+     "--workers", "10", \
+     "--bind", "0.0.0.0:8000", \
+     "--reload"] 
